postgraphile/website/src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */
:root {
  --ifm-color-primary: #006ef5; /* #298aff; */
  --ifm-color-primary-dark: #4a68b4;
  --ifm-color-primary-darker: #2d437d;
  --ifm-color-primary-darkest: #112559;
  --ifm-color-primary-light: #a5ceff;
  --ifm-color-primary-lighter: #cbe3ff;
  --ifm-color-primary-lightest: #f4faff;
  /*--ifm-code-font-size: 95%;*/
  --docusaurus-highlighted-code-line-bg: rgba(200, 230, 255, 0.3);
  --ifm-navbar-link-color: #112559;
  --ifm-font-family-base: Sarabun, Helvetica, Verdana, Arial, sans-serif;
  --ifm-footer-background-color: transparent;
  --ifm-footer-link-color: var(--ifm-color-primary-dark);
  --ifm-footer-color: var(--ifm-color-primary-darkest);
}

/* For readability concerns, you should choose a lighter palette in dark mode. */
[data-theme="dark"] {
  --ifm-color-primary: #509dfc;
  --ifm-color-primary-dark: #4a68b4;
  --ifm-color-primary-darker: #2d437d;
  --ifm-color-primary-darkest: #2d437d;
  --ifm-color-primary-light: #a5ceff;
  --ifm-color-primary-lighter: #cbe3ff;
  --ifm-color-primary-lightest: #f4faff;
  --docusaurus-highlighted-code-line-bg: #0d3658cc;
  --ifm-navbar-link-color: var(--ifm-color-primary-light);
  --ifm-footer-link-color: var(--ifm-color-primary-light);
  --ifm-footer-color: var(--ifm-color-primary-lightest);
}

.theme-code-block-highlighted-line {
  border-left: 0.25em solid var(--ifm-color-primary);
}

figure {
  margin-left: 0;
  margin-right: 0;
}

figure p {
  margin: 0;
  text-align: center;
}

figure figcaption {
  font-size: 0.9em;
  font-style: italic;
  text-align: center;
}

.featureSummary details {
  border: none;
  box-shadow: none;
  color: var(--ifm-font-color-base); /* TODO: should be theme variable */
  margin: 0;
  padding-top: 0;
  padding-bottom: 0;
  background: transparent;
}
.featureSummary details > div > div {
  border-radius: 7px;
  background-color: var(--ifm-alert-background-color);
  padding: 1rem;
}
.featureSummary details > div > div {
  border-top: none;
}
.featureSummary details img {
  max-width: calc(100%);
}
.featureSummary details figure {
  margin: 0;
  padding: 0;
}

.featureSummary details > * {
  padding-left: 1rem;
}
.featureSummary details > summary > p {
  display: inline;
}
.featureSummary details > summary::after {
  content: "(click to expand)";
  margin-left: 0.5rem;
  font-size: small;
  color: var(--docusaurus-details-decoration-color);
}
.featureSummary details[open] > summary::after {
  content: "(close)";
}
.featureSummary ul {
  margin-bottom: 0;
}
.featureSummary details ul {
  margin-bottom: 1rem;
}
/*
.featureSummary code {
  background-color: var(--docusaurus-highlighted-code-line-bg);
}
*/
.theme-doc-sidebar-item-link h4 {
  margin-bottom: 5px;
  margin-top: 5px;
  padding-top: 5px;
}
.ul-check li {
  background-image: url("../../static/img/check.svg");
  background-repeat: no-repeat;
  background-position: 0px 3px;
  padding-left: 30px;
  list-style-type: none;
}

.full-width main.container,
.full-width main.container > .row,
.full-width main.container > .row > .col {
  margin: 0;
  margin-top: 0 !important;
  padding: 0;
  max-width: initial;
}

[data-theme="light"] img[src$="#dark-mode-only"],
[data-theme="dark"] img[src$="#light-mode-only"] {
  display: none;
}
.mdx-wrapper {
  article > :not(.wide) {
    max-width: 49rem;
    margin-left: auto;
    margin-right: auto;
  }
}

